--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
 		"svelte-check": "^2.7.1",
 		"typescript": "^4.7.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"autoprefixer": "^10.4.7",
+		"postcss": "^8.4.14",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.2"
+	}
 }
