--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"autoprefixer": "^10.4.7",
+		"bootstrap-icons": "^1.8.3",
 		"postcss": "^8.4.14",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.2"
